# Algo

./: CMakeLists.txt  DSU.hpp  main.cpp
graph_on_pointers/: CMakeLists.txt  graph.cpp  graph.hpp  node.cpp  node.hpp  ops.hpp  tensor.hpp
graph_on_pointers/tests/: main.cpp
libalgo/: CMakeLists.txt  aho_korasik.hpp  dsu.hpp  max_flow.hpp  tmp.cpp
libalgo/tests/: unit-tests.cpp
